@@ -2,14 +2,9 @@ package com.blackwhitemap.blackwhitemap_back.application.ranking;
 
 import com.blackwhitemap.blackwhitemap_back.support.testcontainers.PostgreSQLTestContainersConfig;
 import com.blackwhitemap.blackwhitemap_back.support.utils.DatabaseCleanUp;
-import org.junit.jupiter.api.AfterEach;
-import org.junit.jupiter.api.DisplayName;
-import org.junit.jupiter.api.Nested;
-import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.*;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.cache.Cache;
-import org.springframework.cache.CacheManager;
 import org.springframework.context.annotation.Import;
 import org.springframework.test.context.jdbc.Sql;
 
@@ -28,9 +23,6 @@ class RankingQueryTest {
 
     @Autowired
     private DatabaseCleanUp databaseCleanUp;
-
-    @Autowired
-    private CacheManager cacheManager;
 
     @AfterEach
     void tearDown() {
@@ -57,10 +49,22 @@ class RankingQueryTest {
                     () -> assertThat(results)
                             .extracting(RankingResult.WeeklyBestChef::rank)
                             .containsExactly(1, 2, 3, 4, 5),
-                    () -> assertThat(results.get(0).name()).isEqualTo("유용욱"),
-                    () -> assertThat(results.get(0).rank()).isEqualTo(1),
-                    () -> assertThat(results.get(1).name()).isEqualTo("손종원"),
-                    () -> assertThat(results.get(1).rank()).isEqualTo(2)
+                    () -> {
+                        Assertions.assertNotNull(results);
+                        assertThat(results.getFirst().name()).isEqualTo("유용욱");
+                    },
+                    () -> {
+                        Assertions.assertNotNull(results);
+                        assertThat(results.getFirst().rank()).isEqualTo(1);
+                    },
+                    () -> {
+                        Assertions.assertNotNull(results);
+                        assertThat(results.get(1).name()).isEqualTo("손종원");
+                    },
+                    () -> {
+                        Assertions.assertNotNull(results);
+                        assertThat(results.get(1).rank()).isEqualTo(2);
+                    }
             );
         }
 
@@ -139,6 +143,102 @@ class RankingQueryTest {
                     .extracting(RankingResult.WeeklyBestChef::rank)
                     .containsExactly(1, 2, 3, 4, 5)
                     .isSorted();
+        }
+    }
+
+    @Nested
+    @DisplayName("getDailyBestChefs()")
+    class GetDailyBestChefs {
+
+        @Test
+        @DisplayName("일일 Best Chef 5명을 조회한다 (중복 nickname 제거)")
+        @Sql("/sql/ranking-daily-test-data.sql")
+        void getDailyBestChefs_filtersDuplicateNicknames() {
+            // given & when
+            List<RankingResult.DailyBestChef> results = rankingQuery.getDailyBestChefs();
+
+            // then
+            assertAll(
+                    () -> assertThat(results).hasSize(5),
+                    // 손종원(nickname: 요리 천재)이 3명이지만 rank 2인 1명만 포함
+                    () -> assertThat(results)
+                            .extracting(RankingResult.DailyBestChef::nickname)
+                            .containsExactly("바베큐 연구소장", "요리 천재", "컬리넌", "마시마로", null),
+                    // rank는 응답 기준으로 1~5 재부여
+                    () -> assertThat(results)
+                            .extracting(RankingResult.DailyBestChef::rank)
+                            .containsExactly(1, 2, 3, 4, 5)
+            );
+        }
+
+        @Test
+        @DisplayName("랭킹 데이터가 없으면 빈 리스트를 반환한다")
+        void getDailyBestChefs_withNoData() {
+            // given & when
+            List<RankingResult.DailyBestChef> results = rankingQuery.getDailyBestChefs();
+
+            // then
+            assertThat(results).isEmpty();
+        }
+
+        @Test
+        @DisplayName("Chef 정보를 포함하여 조회한다")
+        @Sql("/sql/ranking-daily-test-data.sql")
+        void getDailyBestChefs_includesChefInfo() {
+            // given & when
+            List<RankingResult.DailyBestChef> results = rankingQuery.getDailyBestChefs();
+
+            // then
+            RankingResult.DailyBestChef firstChef = results.getFirst();
+            assertAll(
+                    () -> assertThat(firstChef.id()).isNotNull(),
+                    () -> assertThat(firstChef.name()).isEqualTo("유용욱"),
+                    () -> assertThat(firstChef.nickname()).isEqualTo("바베큐 연구소장"),
+                    () -> assertThat(firstChef.type()).isEqualTo("BLACK"),
+                    () -> assertThat(firstChef.restaurantName()).isEqualTo("유용옥 바베큐 연구소"),
+                    () -> assertThat(firstChef.smallAddress()).isEqualTo("용산구"),
+                    () -> assertThat(firstChef.category()).isEqualTo("BBQ"),
+                    () -> assertThat(firstChef.rank()).isEqualTo(1),
+                    () -> assertThat(firstChef.score()).isEqualTo(1000L)
+            );
+        }
+
+        @Test
+        @DisplayName("nickname이 null인 셰프는 name으로 중복 판단한다")
+        @Sql("/sql/ranking-daily-test-data.sql")
+        void getDailyBestChefs_usesNameWhenNicknameIsNull() {
+            // given & when
+            List<RankingResult.DailyBestChef> results = rankingQuery.getDailyBestChefs();
+
+            // then
+            // 정지선 셰프는 nickname이 null이므로 name으로 중복 판단
+            RankingResult.DailyBestChef lastChef = results.get(4);
+            assertAll(
+                    () -> assertThat(lastChef.name()).isEqualTo("정지선"),
+                    () -> assertThat(lastChef.nickname()).isNull(),
+                    () -> assertThat(lastChef.rank()).isEqualTo(5)
+            );
+        }
+
+        @Test
+        @DisplayName("가장 높은 rank의 셰프만 포함된다")
+        @Sql("/sql/ranking-daily-test-data.sql")
+        void getDailyBestChefs_includesHighestRankOnly() {
+            // given & when
+            List<RankingResult.DailyBestChef> results = rankingQuery.getDailyBestChefs();
+
+            // then
+            // 손종원은 rank 2, 3, 4에 있지만 rank 2만 포함
+            RankingResult.DailyBestChef sonChef = results.stream()
+                    .filter(chef -> "요리 천재".equals(chef.nickname()))
+                    .findFirst()
+                    .orElseThrow();
+
+            assertAll(
+                    () -> assertThat(sonChef.name()).isEqualTo("손종원"),
+                    () -> assertThat(sonChef.rank()).isEqualTo(2),
+                    () -> assertThat(sonChef.restaurantName()).isEqualTo("라망 시크레 본점")
+            );
         }
     }
 }
